--- a/.gnupg/README
+++ b/.gnupg/README
@@ -1,3 +1,5 @@
+$ gpg --quick-set-expire [fpr] 1y
+
 Reminder:
 ---------
 Do NOT use --refresh-keys
@@ -5,10 +7,10 @@ Use https://github.com/EtiennePerot/parcimonie.sh instead
 
 How to export clean public key:
 -------------------------------
-$ gpg2 -a --export-options export-clean -o 0xEEC73D5809A98A9B.asc --export 0xEEC73D5809A98A9B
+$ gpg -a --export-options export-clean -o 0xEEC73D5809A98A9B.asc --export 0xEEC73D5809A98A9B
 
 How to dump key details:
 ------------------------
-$ gpg2 --list-packets 0xEEC73D5809A98A9B.asc
+$ gpg --list-packets 0xEEC73D5809A98A9B.asc
 $ pgpdump 0xEEC73D5809A98A9B.asc
 
