Update config files

--- a/.gnupg/README
+++ b/.gnupg/README
@@ -14,3 +14,6 @@ How to dump key details:
 $ gpg --list-packets 0xEEC73D5809A98A9B.asc
 $ pgpdump 0xEEC73D5809A98A9B.asc
 
+WKD:
+----
+https://wiki.gnupg.org/WKDHosting
