--- a/.gnupg/README
+++ b/.gnupg/README
@@ -8,6 +8,11 @@ Use https://github.com/EtiennePerot/parcimonie.sh instead
 How to export clean public key:
 -------------------------------
 $ gpg -a --export-options export-clean -o 0xEEC73D5809A98A9B.asc --export 0xEEC73D5809A98A9B
+$ gpg --send-keys 0xEEC73D5809A98A9B
+
+How to upload key to openpgp.net:
+---------------------------------
+$ gpg --export 0xEEC73D5809A98A9B | curl -T - https://keys.openpgp.org
 
 How to dump key details:
 ------------------------
